test/files/neg/gadts2-strict.check
gadts2-strict.scala:14: error: type mismatch;
 found   : Test.MyDouble
 required: a
      case NumTerm(n) => c.x = MyDouble(1.0)
                                       ^
one error found
